--- a/GeoQuizChallenge/app/src/main/AndroidManifest.xml
+++ b/GeoQuizChallenge/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme"
         >
 
-        <activity android:name=".QuizActivity">
+        <activity android:name=".Views.QuizActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
