--- a/GeoQuizChallenge/app/src/main/AndroidManifest.xml
+++ b/GeoQuizChallenge/app/src/main/AndroidManifest.xml
@@ -12,16 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         >
-
+        <activity android:name=".views.CheatActivity"></activity>
         <activity android:name=".views.QuizActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            
         </activity>
-
     </application>
 
 </manifest>
