--- a/GeoQuizChallenge/app/src/main/AndroidManifest.xml
+++ b/GeoQuizChallenge/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         >
-        <activity android:name=".views.CheatActivity"></activity>
+        <activity android:name=".views.CheatActivity" />
         <activity android:name=".views.QuizActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
