--- a/GeoQuizChallenge/build.gradle
+++ b/GeoQuizChallenge/build.gradle
@@ -1,17 +1,36 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     repositories {
         google()
         jcenter()
+        gradlePluginPortal()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
-
+        classpath 'io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
+apply plugin: 'io.gitlab.arturbosch.detekt'
+
+//plugins {
+  //  id("io.gitlab.arturbosch.detekt").version("1.0.1")
+//}
+
+dependencies {
+  detektPlugins "io.gitlab.arturbosch.detekt:detekt-formatting:1.0.1"
+}
+
+
+detekt {
+    autoCorrect = true
+    toolVersion = "1.0.1"
+    input = files("app/src/main/")
+    config = files("config/detekt/detekt.yml")
+}
+
 
 allprojects {
     repositories {
